# Shaun-Card

./: LICENSE  README.md
shaun-package/shaun/: LICENSE  README.md  pyproject.toml
shaun-package/shaun/shaun/: __init__.py  cli.py  data.py  design.py  display.py  jokes.py
shaun-package/shaun/tests/: test_basic.py
