[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shaun"
version = "0.1.0"
description = "Terminal portfolio: Shaun's interactive business card"
readme = "README.md"
authors = [{name = "Shaun"}]
license = {text = "MIT License"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.scripts]
shaun = "shaun.cli:main"

[tool.setuptools.packages.find]
where = ["."]
